--- a/style.css
+++ b/style.css
@@ -52,8 +52,8 @@ header {
     color: #401F71;
 }
 
-#form-cto-start {    
-    font-family: Roboto;
+form {    
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 400;
 }
@@ -95,8 +95,8 @@ header {
     
     width: 230px;
     height: 30px;
-
-    margin: auto; /* ALIGN INPUT TO CENTER */
+    
+    margin-inline: auto; /* ALIGN INPUT TO CENTER */
     padding: 10px;
 
     border: none;
@@ -152,6 +152,130 @@ button {
 
 #form-cto-start button:focus {
     outline: 3px solid #ffffff;
+}
+
+main {
+    color: #ffffff;
+
+    padding: 20px 54px 30px;
+    
+    background-color: #401F71;
+}
+
+#form-quiz {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.answer-wrapper-horizontal, .input-wrapper-horizontal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    place-content: center;
+}
+
+.answer-wrapper-vertical {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    align-items: center;
+}
+
+main .input-text {
+    margin-top: 15px;
+}
+
+.input-radio {
+    appearance: none;
+    
+    width: 26px;
+    height: 26px;
+
+    margin-left: 20px;
+    margin-right: 10px;
+
+    border-radius: 50%;
+    
+    background-color: #824D74;
+}
+
+.input-radio:focus {
+    outline: 3px solid #FDAF7B;
+    background-color: #824D74;
+
+}
+.input-radio:checked {
+    background-color: #FDAF7B;
+    border: 5px solid #824D74;
+}
+
+.input-radio:user-invalid {
+    outline: 3px solid red;
+}
+
+fieldset {
+    border: none;
+}
+
+main legend {
+    margin-bottom: 15px;
+    border: none;
+}
+
+.checkbox-wrapper {
+    display: flex ;
+    position: relative;
+}
+
+.checkbox-wrapper input {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 26px;
+    height: 26px;
+    opacity: 0%;
+}
+
+.checkbox-wrapper label {
+    display: flex;
+    gap: 8px;
+    margin: 0px;
+    align-items: center;
+}
+
+.checkbox-wrapper label::before {
+    content: '';
+    width: 26px;
+    height: 26px;
+    background: #824D74;
+    border-radius: 5px;
+    display: block;
+}
+
+.checkbox-wrapper input:checked + label::before {
+    background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='16' height='16' rx='5' fill='%23FDAF7B'/%3E%3C/svg%3E%0A");
+    /* background-image: url("data:image/svg+xml,%3Csvg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.59 10.58L1.42 6.41L0 7.82L5.59 13.41L17.59 1.41L16.18 0L5.59 10.58Z' fill='%23F67669'/%3E%3C/svg%3E%0A"); */
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.checkbox-wrapper input:focus + label::before {
+    outline: 3px solid #FDAF7B;
+}
+
+.checkbox-wrapper input:user-invalid + label::before {
+    outline: 3px solid red;
+}
+
+#question-7-2 ~ label {
+    margin-left: 20px;
+}
+
+#question-7-3 ~ label {
+
+    margin-left: 20px;
 }
 
 #form-quiz button {
